[package]
name    = "badge_2021_rs"
version = "0.1.0"
authors = ["Daniel Maslowski <info@orangecms.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# anyhow = { version = "1.0.56", default_features = false }
panic-write = "0.1.0"
critical-section = "0.2.6"
embedded-graphics = "0.7"
panic-halt   = "0.2"
esp32 = { git = "https://github.com/esp-rs/esp-pacs.git", branch="with_source", package = "esp32" }
esp32-hal = { package = "esp32-hal", git = "https://github.com/esp-rs/esp-hal.git" }
xtensa-lx-rt = { version = "0.9", features = ["esp32"], optional = true }
nb = "1.0.0"
shared-bus = { version = "0.2.3", features = ["xtensa"] }
ssd1306 = "0.7"

[features]
default = ["rt", "critical-section/custom-impl"]
rt = ["xtensa-lx-rt"]
