[package]
name    = "badge_2021_rs"
version = "0.1.0"
authors = ["Daniel Maslowski <info@orangecms.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# anyhow = { version = "1.0.56", default_features = false }
arrform = "0.1.1"
critical-section = "1.1.2"
embedded-graphics = "0.8.1"
nb = "1.0.0"
panic-halt = "0.2.0"
panic-write = "0.1.0"
shared-bus = { version = "0.3.1", features = ["xtensa"] }
ssd1306 = "0.8"

esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-hal-common = { version = "0.13.0", features = ["esp32"] }
esp-println = { version = "0.7.0", features = ["esp32"] }
esp32-hal = "0.16.0"
xtensa-lx = { version = "0.8.0", features = ["esp32"], optional = true }
xtensa-lx-rt = { version = "0.16.0", features = ["esp32"], optional = true }

[features]
default            = ["rt", "vectored", "xtal-40mhz"]
async              = ["esp-hal-common/async"]
bluetooth          = []
debug              = ["esp-hal-common/debug"]
defmt              = ["esp-hal-common/defmt", "esp-println/defmt"]
eh1                = ["esp-hal-common/eh1"]
log                = ["esp-hal-common/log", "esp-println/log"]
rt                 = ["xtensa-lx-rt", "xtensa-lx"]
ufmt               = ["esp-hal-common/ufmt"]
vectored           = ["esp-hal-common/vectored"]
xtal-40mhz         = ["esp-hal-common/xtal-40mhz"]
